[package]
name = "oldnav"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]

[lib]
name = "oldnav_lib"
path = "src/lib.rs"

[[bin]]
name = "oldnav"
path = "src/main.rs"

[dependencies.nanovg]
version = "*"
features = ["gl2"]

[dependencies]
nalgebra = "0.10.*"
astro = "2.0.0"
sun = "0.2"
geojson = "0.4.0"
libc = "0.2.16"
xplm = "0.1.9"
xplm-sys = "0.1.5"
xplane_plugin = "0.1.1"

[profile.dev]

